<resources>
    <string name="app_name">Coza Family</string>
    <string name="channel_name">lullaby_channel</string>
    <string name="coza_channel_name">coza_channel</string>
    <string name="channel_description">Lulluby wake up notification</string>
    <string name="coza_channel_description">coza family post notification</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">User</string>
    <string name="msg_subscribe_failed">Notification  Unsucessful</string>
    <string name="msg_subscribed">Subscription Successful</string>
    <string name="error_image_msg">Image not saved, Try again!</string>
    <string name="error">Error!</string>
    <string name="like_count">%d Likes</string>
    <string name="comment_count">%d Comments</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">801531950349242</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb801531950349242</string>
    <string name="default_notification_channel_id">coza_family_id</string>
    <string name="upload_photo">\tupload photo</string>
    <string name="upload_video">\tupload video</string>
    <string name="upload_audio">\tupload audio</string>
    <string name="error_post_msg">Post Not Created, Try Again!</string>
    <string name="version">Version: %s</string>
    <string name="enter_login_details">Please Enter Your Login Details</string>
    <string name="post">Post</string>
</resources>
