<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textTitleReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/app_background_white"
        android:textSize="@dimen/title_size_small"
        android:text="Please fill the form below to register"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/coza"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_reg"/>

    <LinearLayout
        android:id="@+id/layout_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            android:textColor="@color/app_background_white"
            android:textColorHint="@color/app_background_white"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:padding="12dp"
            android:background="@drawable/edittext_custom"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            android:textColor="@color/app_background_white"
            android:textColorHint="@color/app_background_white"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:padding="12dp"
            android:background="@drawable/edittext_custom" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/app_background_white"
            android:textColorHint="@color/app_background_white"
            android:hint="@string/prompt_password_confirm"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:padding="12dp"
            android:background="@drawable/edittext_custom" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_btn"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/app_background_white"
            android:text="@string/action_sign_in" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>